--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo ${{ env.GITHUB_ACTOR }}
+      - run: echo ${{ GITHUB_ACTOR }}
       - uses: actions/checkout@v3.0.0
-      - run: echo 'Hello'
+      - run: echo 'hogehoge'
