--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -14,6 +14,9 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - run: echo $GITHUB_ACTOR
       - uses: actions/checkout@v3.0.0
-      - run: echo 'hogehoge'
+      - run: |
+          pwd
+          ls
+          echo $GITHUB_ACTOR
+          jq '.deployable_users | any(. == "$GITHUB_ACTOR")' ./deployable_users.json
