--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -11,7 +11,7 @@ jobs:
     # これは本来environmentsを利用してreviewステップを入れたいが契約がGithub Enterpriseではないのでそれができず、仕方なしのworkaroundです
     # ref https://stackoverflow.com/questions/69260199/is-there-a-way-to-restrict-what-branch-an-action-can-be-run-on
     # 事故を起こさないためにもこの設定は作業ブランチ上でも外さないようお願いします
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v3.0.0
