--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: actions/checkout@v3.0.0
       - run: |
           pwd
-          ls
           echo $GITHUB_ACTOR
+          cd .github/workflows
           jq '.deployable_users | any(. == "$GITHUB_ACTOR")' ./deployable_users.json
