--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -2,6 +2,11 @@ name: 'Deploy'
 
 on:
   workflow_dispatch:
+    inputs:
+      service:
+        required: true
+        description: "deploy target service"
+        type: string
 
 jobs:
   deploy:
