--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -15,7 +15,7 @@ on:
         required: true
         description: "environment"
         type: string
-    branches: ["main"]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -34,6 +34,13 @@ jobs:
           IS_DEPLOYABLE_USER=$(jq --arg ga $GITHUB_ACTOR '.deployable_users | any(. == $ga)' ./deployable_users.json)
           if [ $IS_DEPLOYABLE_USER != "true" ]; then
             echo 'deployable_users.jsonに登録されてないユーザはデプロイできません'
+            exit 1
+          fi
+      - name: exit if the input environment is not supported
+        run: |
+          env=$INPUT_ENVIRONMENT
+          if ! [ $env = "dev" || $env = "staging" ];then
+            echo "$env is not supported."
             exit 1
           fi
       - name: notify slack
