--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -35,6 +35,6 @@ jobs:
       - uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
-          approvers: ${{ env.GITHUB_ACTOR }}
+          approvers: shotaogasawara
       - name: Deploy to production
         run: echo deploying
