--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -21,6 +21,9 @@ on:
           - dev11
           - staging
 
+permissions:
+  issues: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -33,8 +36,10 @@ jobs:
 
     steps:
       - uses: trstringer/manual-approval@v1
+        timeout-minutes: 1 # 適度な時間にしておく
         with:
           secret: ${{ github.TOKEN }}
-          approvers: shotaogasawara
+          exclude-workflow-initiator-as-approver: false
+          issue-title:
       - name: Deploy to production
         run: echo deploying
